--- a/Front-End/src/css/stylelist.css
+++ b/Front-End/src/css/stylelist.css
@@ -32,6 +32,7 @@
 /* table */
 .fixed-table-container {
   margin-bottom: 150px;
+  margin-top: 25px;
 } 
 
 
